k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: devops-app-service
spec:
  selector:
    app: devops-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: NodePort   # Pour accéder depuis l’extérieur (ClusterIP par défaut)
